More fixes for type being cut off

--- a/src/common/cue.css
+++ b/src/common/cue.css
@@ -14,6 +14,6 @@
   display: table;
   margin: 0 auto;
   visibility: hidden;
-  line-height: 1.4;
+  line-height: 1.5;
 }
 
